# MongoDB_and_RabbitMQ

./: README.md  main.py  models.py  pyproject.toml  seed.py
hw_rabbitMQ/: consumer.py  producer.py
